# attache

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
db/: schema.sql
docs/: architecture.md  code-sketches.md  data-model.md  decisions.md  execution.md  memory.md  mvp.md  prior-art.md  risks.md  roadmap.md  running.md  security.md  sessions.md  stack.md  system-design.md  task-engine.md  voice.md
scripts/: smoke_agent.py  smoke_router.py
src/attache/: __init__.py  config.py  db.py  events.py
src/attache/gateway/: __init__.py  app.py  approvals.py  context.py  dispatcher.py
src/attache/gateway/api/: tasks.py  turns.py  ws.py
src/attache/gateway/memory/: __init__.py  store.py
src/attache/gateway/notify/: notifier.py
src/attache/gateway/policy/: __init__.py  engine.py  rules.py
src/attache/gateway/router/: __init__.py  base.py  claude_cli_router.py  fastpath.py  heuristic.py  llm.py  openai_router.py  tools.py
src/attache/gateway/static/: index.html
src/attache/gateway/tasks/: __init__.py  engine.py  states.py
src/attache/runner/: __init__.py  artifacts.py  base.py  claude.py  scripted.py  taskboard.py
tests/: conftest.py  test_engine.py  test_policy.py  test_seam.py  test_states.py
