[project]
name = "attache"
version = "0.0.1"
description = "Voice-operated agent orchestrator — Phase 0 seam"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
# Real agent + router backends. Not required to run the seam with the
# scripted/heuristic backends, so kept optional to keep the base install light.
claude = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
attache-gateway = "attache.gateway.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
